Hack to fix spacing issue

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -88,10 +88,6 @@ form.contact input:focus, form.contact textarea:focus {
 }
 
 /* General styles */
-body {
-	background-color: rgb(51,153,204);
-}
-
 body > section {
 	position: relative;
 	padding: 50px 0;
